<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home"
    >

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mercados.cestao.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_comida"
        android:name="com.mercados.cestao.ui.web.CatalogoAlimentos"
        android:label="@string/menu_alimentos"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_bar"
        android:name="com.mercados.cestao.ui.web.CatalogoBar"
        android:label="@string/menu_bar"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_higiene"
        android:name="com.mercados.cestao.ui.web.CatalogoHigiene"
        android:label="@string/menu_higiene"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_limpeza"
        android:name="com.mercados.cestao.ui.web.CatalogoLimpeza"
        android:label="@string/menu_limpeza"
        tools:layout="@layout/fragment_web" />

    <fragment
        android:id="@+id/nav_configuracao"
        android:name="com.mercados.cestao.ui.slideshow.SlideshowFragment"
        android:label="@string/configuracao"
        tools:layout="@layout/fragment_usuario"/>

</navigation>