<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="12sp"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:layout_marginEnd="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="12sp"
        android:text="@string/quant"
        />
    <TextView
        android:id="@+id/preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/valorProduto"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>