<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/layout_configuracao"
    android:layout_marginEnd="@dimen/layout_configuracao"
    android:background="@color/fundoConfi"
    tools:context=".Configuracao">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toStartOf="@+id/labNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/labNome"

        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textAllCaps="true"
        android:autofillHints="@string/nome"
        android:hint="@string/nome"
        android:layout_width="match_parent"
        android:enabled="true"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labTel"

        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labNome" />

    <EditText
        android:id="@+id/labTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:inputType="numberDecimal"
        android:digits="1234567890"
        android:textAllCaps="true"
        android:autofillHints="@string/labTel"
        android:hint="@string/labTel"
        android:enabled="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labEndereco"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.014"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labTel" />

    <EditText
        android:id="@+id/labEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="true"

        android:inputType="text"
        android:textAllCaps="true"
        android:autofillHints="@string/labEndereco"
        android:hint="@string/labEndereco"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labRef"

        app:layout_constraintBottom_toTopOf="@+id/labRef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labEndereco"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/labRef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:enabled="true"

        android:inputType="text"
        android:textAllCaps="true"
        android:autofillHints="@string/labRef"
        android:hint="@string/labRef"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labEndereco" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/labPagamento"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labRef" />

    <RadioGroup
        android:id="@+id/labPagamento"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/labCartao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/cartao"

            android:onClick="onClick"

            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="279dp" />

        <RadioButton
            android:id="@+id/labDinheiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinheiro"

            android:onClick="onClick"

            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="279dp" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/pagamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"

        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"

        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labPagamento"
        app:layout_constraintVertical_bias="0.01" />

</androidx.constraintlayout.widget.ConstraintLayout>